# -*- Makefile -*-

SUBDIRS = build-aux include src/lib/ememoa test doc

ACLOCAL_AMFLAGS = -I build-aux

EXTRA_DIST	= bootstrap

MAINTAINERCLEANFILES =				\
	configure				\
	Makefile.in				\
	config.log				\
	config.status				\
	stamp-h1				\
	config.h				\
	config.h.in				\
	libtool					\
	aclocal.m4
