# -*- Makefile -*-

TESTS 	=					\
	test01					\
	test02					\
	test03					\
	test04					\
	test05					\
	test06					\
	test07					\
	test08					\
	test09					\
	test10					\
	test11					\
	test12					\
	test13

check_PROGRAMS = $(TESTS)
INCLUDES = -I$(top_srcdir)/include
LDADD 	= $(top_builddir)/src/lib/ememoa/libememoa.la

MAINTAINERCLEANFILES = Makefile.in
